# video-mcp-server

./: .gitignore  CLAUDE_SETUP.md  OPENCODE_SETUP.md  README.md  README_FINAL.md  README_РЕЗЮМЕ.md  SUMMARY.md  TODO_WHISPER_INSTALL.md  claude-desktop-config-example.json  install.sh  opencode-config-example.json  pyproject.toml  test_mcp_connection.py  test_server.py  test_tools.py  test_youtube.py
video_mcp_server/: __init__.py  server.py
