[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-mcp-server"
version = "0.1.0"
description = "Complete video processing MCP server - FFmpeg + optional Groq AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "groq>=0.9.0",
    "pillow>=10.0.0",
    "yt-dlp>=2024.0.0",
]

[project.scripts]
video-mcp-server = "video_mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["video_mcp_server*"]
